# Hist-Tree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.sh  main.cpp  run.sh  test.sh
benchmarks/: benchmark.cpp  benchmarkTest.cpp
docs/: FlameGraphBuild1.txt  FlameGraphBuild2.txt  SOSD.txt  todo.txt
include/: Builder.h  HistTree.h  common.h
modules/: todo.txt
src/: Builder.cpp  HistTree.cpp
test/: builder_test.cpp  histtree_test.cpp
tests/: builder_test.cpp  histtree_test.cpp
